--- a/style.css
+++ b/style.css
@@ -1,3 +1,99 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+h1{
+    text-align: center;
+    color:green;
+    width: 700;
+    margin-top: 30px;
+
+}
+section{
+    display:flex;
+    margin-bottom: 100px;
+}
+.devide-area{
+    width: 50%;
+    margin-left: 2%;
+}
+.recipe-area{
+    display: flex;
+}
+.devide-area img{
+    width:90%;
+    
+    
+}
+.design{
+    margin-left: 25px;
+}
+h2{
+    color:goldenrod;
+}
+
+.coloring{
+    color:green;
+}
+.link-button{
+    text-decoration: none;
+    padding: 10px 40px;
+    background-image: linear-gradient(greenyellow,green);
+    border-radius: 5px;
+    font-weight: 700;
+    color: black;
+}
+.color-in{
+    color: hotpink;
+    font-weight: 700;
+}
+.My-area{
+    background-image: url(images/Frame\ 59.jpg);
+    background-repeat: no-repeat;
+    height: 570px;
+}
+.text{
+    margin-top: 27px;
+}
+.middle-point{
+    text-align: center;
+}
+.middle{
+    text-align: center;
+    color: green;
+}
+.Recipe-area{
+    background-color:whitesmoke;
+    margin:0;
+    padding:0;
+    margin-bottom: 60px;
+    
+ }
+.three-devide{
+    width: 25%;
+    height: 60%;
+    padding: 0px 25px; 
+    margin: 2%;
+    background-color: white;
+
+}
+.three-devide img{
+    width:100%;
+    height:100%;
+    border-radius: 20px;
+    margin-top: 20px;
+    
+}
+
+.footer-area{
+    background-color: black;
+    text-align: center;
+    height: 150px;
+    padding-top: 20px;
+
+}
+.color{
+    color: white;
+
 }
